<?xml version="1.0" encoding="UTF-8"?>
<!--
   Copyright 2014 Bern University of Applied Sciences.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
      
    <groupId>eu.fusepool.p3.webid</groupId>
    <artifactId>proxy-launcher</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <name>WebID Proxy Launcher</name>
    <description>An HTTPS to HTTP proxy authenticating WebIDs</description>
    <url>https://fusepoolp3.github.io/</url>
    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>http://opensource.org/licenses/Apache-2.0</url>
        </license>
    </licenses>

    <packaging>jar</packaging>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>
    </properties>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>2.6.1</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>.</directory>
                            <includes>
                                <include>stanbol/**</include>
                                <include>*.log</include>
                                <include>dependency-reduced-pom.xml</include>
                            </includes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.sling</groupId>
                <artifactId>maven-launchpad-plugin</artifactId>
                <version>2.3.2</version>
                <executions>
                    <execution>
                        <id>prepare-package</id>
                        <goals>
                            <goal>prepare-package</goal>
                        </goals>
                        <configuration>
                            <includeDefaultBundles>false</includeDefaultBundles>
                            <!-- Standalone jar requires an OSGi http service implementation -->
                            <jarWebSupport>
                                <groupId>org.apache.felix</groupId>
                                <artifactId>org.apache.felix.http.jetty</artifactId>
                                <version>2.2.1</version>
                            </jarWebSupport>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>org.apache.stanbol.launchpad.Main</mainClass>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <artifactSet>
                                <!-- Use this to in/exclude only specific dependencies -->
                                <includes>
                                    <include>org.apache.stanbol:org.apache.stanbol.commons.launchpad</include>
                                    <include>org.apache.sling:org.apache.sling.launchpad.base</include>
                                </includes>
                            </artifactSet>
                            <!-- transformers>
                              <transformer implementation="org.apache.maven.plugins.shade.resource.ComponentsXmlResourceTransformer" />
                            </transformers -->
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.rat</groupId>
                <artifactId>apache-rat-plugin</artifactId>
                <version>0.11</version>
                <configuration>
                    <excludes />
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.sling</groupId>
                    <artifactId>maven-launchpad-plugin</artifactId>
                    <version>2.3.2</version>
                    <extensions>true</extensions>
                </plugin>
                <!-- generates version number of dependencies suitable for introspection
                in pax-exam based OSGi lightweight-integration tests -->
                <plugin>
                    <groupId>org.apache.servicemix.tooling</groupId>
                    <artifactId>depends-maven-plugin</artifactId>
                    <version>1.2</version>
                    <executions>
                        <execution>
                            <id>generate-depends-file</id>
                            <goals>
                                <goal>generate-depends-file</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>1.7</version>
                    <configuration>
                        <target>
                            <property name="vm.args" value="" />
                            <java fork="true" jar="${project.build.directory}/${project.build.finalName}.jar" dir="${project.build.directory}">
                                <jvmarg line="-Xmx1024m -XX:MaxPermSize=256M ${vm.args}" />
                            </java>
                        </target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- Sling -->
            <dependency>
                <groupId>org.apache.sling</groupId>
                <artifactId>org.apache.sling.launchpad.base</artifactId>
                <version>2.5.0</version>
                <classifier>app</classifier>
            </dependency>
            <dependency>
                <groupId>org.apache.sling</groupId>
                <artifactId>org.apache.sling.launchpad.base</artifactId>
                <version>2.5.0</version>
                <classifier>webapp</classifier>
                <type>war</type>
            </dependency>
            <dependency>
                <groupId>org.apache.sling</groupId>
                <artifactId>org.apache.sling.launchpad.installer</artifactId>
                <version>1.2.0</version>
            </dependency>
            <dependency>
                <groupId>org.apache.sling</groupId>
                <artifactId>org.apache.sling.launchpad.api</artifactId>
                <version>1.1.0</version>
            </dependency>
            <dependency>
                <groupId>org.apache.sling</groupId>
                <artifactId>org.apache.sling.installer.api</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.apache.sling</groupId>
                <artifactId>org.apache.sling.installer.core</artifactId>
                <version>3.5.4</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <!-- The Apache Stanbol launchpad -->
            <groupId>org.apache.stanbol</groupId>
            <artifactId>org.apache.stanbol.commons.launchpad</artifactId>
            <version>0.12.0</version>
        </dependency>
        <dependency>
            <!-- maven-launchpad-plugin builds on the launchpad.base app -->
            <groupId>org.apache.sling</groupId>
            <artifactId>org.apache.sling.launchpad.base</artifactId>
            <version>2.5.0</version>
            <classifier>app</classifier>
        </dependency>
    
        <!-- BundeLists -->
        <dependency>
            <groupId>org.apache.clerezza.provisioning</groupId>
            <artifactId>felixosgi</artifactId>
            <version>0.1</version>
            <type>partialbundlelist</type>
        </dependency>
        <dependency>
            <groupId>org.apache.clerezza.provisioning</groupId>
            <artifactId>felixweb</artifactId>
            <version>0.1</version>
            <type>partialbundlelist</type>
        </dependency>
        <dependency>
            <groupId>eu.fusepool.p3.webid</groupId>
            <artifactId>proxy-bundlelist</artifactId>
            <version>1.0.0-SNAPSHOT</version>
            <type>partialbundlelist</type>
        </dependency>
    </dependencies>

</project>